mule-user-guide/v/3.7/ejb-transport-reference.adoc
= EJB Transport Reference
:keywords: connectors, ejb, transports, java beans

The Enterprise Java Beans (EJB) transport allows EJB session beans to be invoked as part of an event flow. Components can be given an EJB outbound endpoint, which invokes the remote object and optionally returns a result.

http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/transport/ejb/package-summary.html[Javadoc for EJB Transport]

== Connector

The Mule EJB Connector provides connectivity for EJB beans.

.Attributes of <connector...>
[cols="30a,70a",options="header"]
|===
|Name |Description
|pollingFrequency |Period (ms) between polling connections.

*Type*: long +
*Required*: no +
|securityManager-ref |Bean reference to the security manager that should be used.

*Type*: name (no spaces) +
*Required*: no +
|securityPolicy |The security policy (file name) used to enable connections.

*Type*: string +
*Required*: no +
|serverClassName |The target class name.

*Type*: name (no spaces) +
*Required*: no +
|serverCodebase |The target method.

*Type*: string +
*Required*: no +
|===

No child elements for connector.


For example:

[source,xml]
----
<ejb:connector name="ejb" jndiContext-ref="jndiContext" securityPolicy="rmi.policy" />
----

== Using the EJB Transport

To use the EJB transport, you must define the EJB namespace and schema location at the top of the Mule configuration file. For example:

[source,xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns:spring="http://www.springframework.org/schema/beans"
   xmlns:ejb="http://www.mulesoft.org/schema/mule/ejb"
   xsi:schemaLocation="
      http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
      http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
      http://www.mulesoft.org/schema/mule/ejb http://www.mulesoft.org/schema/mule/ejb/current/mule-ejb.xsd">
...
----

*Note*: In this code example, `spring-beans-current.xsd` is a placeholder. To locate the correct version, see http://www.springframework.org/schema/beans/.

EJB endpoints are configured the same way as link:/mule-user-guide/v/3.7/rmi-transport-reference[RMI endpoints].

*Note*: Only outbound endpoints can use the EJB transport. For a given endpoint, you must provide the following information:

* Registry host
* Registry port
* Remote home name
* Remote method name

Use these values to establish the dispatcher connection, for example:

[source,xml]
----
<ejb:endpoint host="localhost" port="1099" object="SomeService" method="remoteMethod"/>
----

Alternatively, you can use a URI-based configuration:

[source,xml]
----
<outbound-endpoint address="ejb://localhost:1099/SomeService?method=remoteMethod"/>
----

If the method takes one or more input arguments, configure their types as a comma-separated list using the `methodArgumentTypes` attribute. Multiple arguments are passed in as an array of objects as the payload of the Mule message.

== Transformers

No specific transformers are required for EJB.

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
